more code clean up
git-svn-id: https://svn.apache.org/repos/asf/chemistry/opencmis/trunk@1498960 13f79535-47bb-0310-9956-ffa450edef68